# CustomerSupportAI

./: .env.example  .replit  LICENSE  README.md  demo_main.py  demo_test.py  main.py  pyproject.toml  simple_main.py  test_crew.py  test_support_system.py  working_main.py
agents/: escalation_agent.py  faq_agent.py  logging_agent.py  simple_agents.py
attached_assets/: Pasted-Build-a-Python-project-called-Customer-Support-Agent-Crew-using-the-structure-and-conventions-of-htt-1748146465785.txt
config/: config.yaml
crew/: crew.py  simple_crew.py
sample_data/: customer_query.txt
tasks/: task.py
