[project]
name = "customer-support-agent-crew"
version = "1.0.0"
description = "CrewAI-based customer support automation system with FAQ, escalation, and logging agents"
authors = [
    {name = "Customer Support Team", email = "support@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["crewai", "customer-support", "automation", "ai-agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "crewai>=0.118.0",
    "crewai-tools>=0.44.0",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/customer-support-crew/customer-support-agent-crew"
Repository = "https://github.com/customer-support-crew/customer-support-agent-crew"
Issues = "https://github.com/customer-support-crew/customer-support-agent-crew/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "__pycache__*"]
